--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 node_modules
 npm-debug.log
 bower_components
+
+*.bbprojectsettings
+
+arsenic-mjy.bbprojectd/Scratchpad.txt
+
+arsenic-mjy.bbprojectd/Unix Worksheet.worksheet
