--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "url": "https://github.com/zurb/foundation-sites/issues",
     "email": "foundation@zurb.com"
   },
-  "private": true
+  "private": true,
+  "dependencies": {
+    "foundation-sites": "^6.2.0"
+  }
 }
