--- a/config.yml
+++ b/config.yml
@@ -12,8 +12,7 @@ UNCSS_OPTIONS:
     - "src/**/*.html"
   ignore:
     - !!js/regexp .foundation-mq
-    - !!js/regexp ^\.is-.*  # Is this what's breaking uncss and responsive menus? 
-                            # .is- classes are added for a lot of responsive stuff... 
+    - !!js/regexp ^\.is-.*
 
 # Gulp will reference these paths when it copies files
 PATHS:
