Updated .gitignore for some /dist files

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,43 @@ pivot/content-exposure.html.zip
 dist/health-child.html
 
 pivot/arsenic-exposure-children.zip
+
+dist/assets/img/babybottle.svg
+
+dist/assets/img/beer(beerwine).svg
+
+dist/assets/img/bodies(healtheffects).svg
+
+dist/assets/img/brown-rice-syrup(rice).svg
+
+dist/assets/img/chicken(meat).svg
+
+dist/assets/img/CicleGraphic2-1024.png
+
+dist/assets/img/cigarette(smokers).svg
+
+dist/assets/img/cigarettepack(smokers).svg
+
+dist/assets/img/factory(at-risk).svg
+
+dist/assets/img/gluten-free(gluten-free).svg
+
+dist/assets/img/hijiki(seafood).svg
+
+dist/assets/img/juice(kidsfood).svg
+
+dist/assets/img/mining(at-risk).svg
+
+dist/assets/img/NSF(treatment).svg
+
+dist/assets/img/playstructure(ptwood).svg
+
+dist/assets/img/rice-milk(kids-food).svg
+
+dist/assets/img/ricebowl(rice).svg
+
+dist/assets/img/ricecereal(kidsfood).svg
+
+dist/assets/img/testkit(testing).svg
+
+dist/assets/img/trowel(fruitsveg).svg
